# CS677-Labs

./: README.md
docs/: DESIGN.md  EXPERIMENTS.md  OUTPUTS.md  PERF.md  README.md  TEST.md
docs/outputs/: CLIENT.md  DOCKER.md
src/: .env  README.md  Run.sh  docker-compose.yml  inventory.csv  inventory.json  pom.xml
src/Client/src/: Benchmark.java  Benchmarkbuy.java  Benchmarksearch.java  Client.java  Test.java
src/deployment/: .env  db  deploy.sh
src/frontend/: pom.xml
src/frontend/src/main/java/: Main.java
src/orderservice/: pom.xml
src/orderservice/src/main/java/: Main.java
src/pygmy-backend/: .env  .gitignore  Cargo.toml  Dockerfile  bootstrap.sh  db
src/pygmy-backend/migrations/2020-04-04-165427_order/: down.sql  up.sql
src/pygmy-backend/migrations/2020-04-04-165439_topic/: down.sql  up.sql
src/pygmy-backend/migrations/2020-04-04-165443_item/: down.sql  up.sql
src/pygmy-backend/migrations/2020-04-04-180121_item-data/: down.sql  up.sql
src/pygmy-backend/src/: catalog.rs  configs.rs  data.rs  models.rs  order.rs  schema.rs
src/pygmy-client/: Cargo.toml
src/pygmy-client/src/: main.rs
src/pygmy-frontend/: Cargo.toml  Dockerfile
src/pygmy-frontend/src/: configs.rs  main.rs
src/src/main/java/: Main.java  makeDB.java
tests/: README.md  Test.java  perf.sh
tests/pygmy-client/: .gitignore  Cargo.toml
tests/pygmy-client/src/: models.rs
