[package]
name = "pygmy-backend"
version = "0.1.0"
authors = ["Hao Shi <shisoftgenius@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix-rt = "1.0"
diesel = { version = "1.0.0", features = ["sqlite"] }
dotenv = "0.9.0"
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }

[[bin]]
name = "catalog-server"
path = "src/catalog.rs"

[[bin]]
name = "order-server"
path = "src/order.rs"