[package]
name = "pygmy-backend"
version = "0.1.0"
authors = ["Hao Shi <shisoftgenius@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix-rt = "1.0"
diesel = { version = "1.0.0", features = ["sqlite"] }
dotenv = "0.9.0"
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "0.2", features = ["full"] }
log = { version = "0.4.5", features = ["std"] }
simple_logger = "1.6.0"
futures = {version = "0.3"}


[dependencies.reqwest]
version = "0.10"
default-features = false
features = ["json"]

# Here we use a framework from Hao Shi for replicated state machine
[dependencies.bifrost]
git = "https://github.com/ShisoftResearch/bifrost.git"
rev = "75b73470c8c37adcdc702f5e87f2928a0fb638f6"

[dependencies.bifrost_plugins]
git = "https://github.com/ShisoftResearch/bifrost.git"
rev = "75b73470c8c37adcdc702f5e87f2928a0fb638f6"

[dependencies.bifrost_hasher]
git = "https://github.com/ShisoftResearch/bifrost.git"
rev = "75b73470c8c37adcdc702f5e87f2928a0fb638f6"

[[bin]]
name = "catalog-server"
path = "src/catalog.rs"

[[bin]]
name = "order-server"
path = "src/order.rs"