[package]
name = "pygmy-frontend"
version = "0.1.0"
authors = ["Hao Shi <shisoftgenius@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix-rt = "1.0"
dotenv = "0.9.0"
lazy_static = "1.4.0"
log = { version = "0.4.5", features = ["std"] }
simple_logger = "1.6.0"
serde = { version = "1.0", features = ["derive"] }


[dependencies.reqwest]
version = "0.10"
default-features = false
features = ["json"]